files/rules.v4
# Generated by iptables-save v1.6.1 on Fri Dec 14 18:20:39 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -s 163.172.142.239/32 -j DROP
-A INPUT -s 104.28.6.22/32 -j DROP
-A INPUT -s 104.28.7.22/32 -j DROP
-A INPUT -s 160.153.129.121/32 -j DROP
-A INPUT -s 104.31.80.162/32 -j DROP
-A INPUT -s 104.31.81.162/32 -j DROP
-A INPUT -s 104.24.113.180/32 -j DROP
-A INPUT -s 104.24.112.180/32 -j DROP
-A INPUT -s 174.138.109.5/32 -j DROP
-A INPUT -s 178.128.132.25/32 -j DROP
-A INPUT -s 104.27.157.115/32 -j DROP
-A INPUT -s 104.27.156.115/32 -j DROP
-A INPUT -s 213.133.104.179/32 -j DROP
-A INPUT -s 18.224.82.177/32 -j DROP
-A INPUT -s 91.192.226.195/32 -j DROP
-A INPUT -s 23.207.242.201/32 -j DROP
-A INPUT -s 52.89.137.136/32 -j DROP
-A INPUT -s 54.68.124.197/32 -j DROP
-A INPUT -s 54.68.141.65/32 -j DROP
-A INPUT -s 54.70.96.232/32 -j DROP
-A INPUT -s 54.191.94.148/32 -j DROP
-A INPUT -s 52.35.47.68/32 -j DROP
-A INPUT -s 52.35.125.204/32 -j DROP
-A INPUT -s 52.36.31.140/32 -j DROP
-A INPUT -s 13.249.22.78/32 -j DROP
-A INPUT -s 13.249.22.66/32 -j DROP
-A INPUT -s 13.249.22.103/32 -j DROP
-A INPUT -s 13.249.22.85/32 -j DROP
-A INPUT -s 46.253.112.22/32 -j DROP
-A INPUT -s 172.217.7.51/32 -j DROP
-A INPUT -s 104.24.0.119/32 -j DROP
-A INPUT -s 104.25.255.118/32 -j DROP
-A INPUT -s 31.13.93.35/32 -j DROP
-A INPUT -s 151.101.182.49/32 -j DROP
-A INPUT -s 151.101.180.249/32 -j DROP
-A INPUT -s 34.195.24.230/32 -j DROP
-A INPUT -s 52.20.103.255/32 -j DROP
-A INPUT -s 23.22.170.77/32 -j DROP
-A INPUT -s 208.77.152.196/32 -j DROP
-A INPUT -s 95.131.28.244/32 -j DROP
-A INPUT -s 152.195.19.193/32 -j DROP
-A INPUT -s 72.21.81.131/32 -j DROP
-A INPUT -s 104.31.68.74/32 -j DROP
-A INPUT -s 104.31.69.74/32 -j DROP
-A INPUT -s 104.20.19.221/32 -j DROP
-A INPUT -s 104.20.20.221/32 -j DROP
-A INPUT -s 149.202.221.181/32 -j DROP
-A INPUT -s 52.90.99.174/32 -j DROP
-A INPUT -s 37.187.166.230/32 -j DROP
-A INPUT -s 104.31.64.130/32 -j DROP
-A INPUT -s 104.31.65.130/32 -j DROP
-A INPUT -s 104.24.111.135/32 -j DROP
-A INPUT -s 104.24.110.135/32 -j DROP
-A INPUT -s 188.165.129.145/32 -j DROP
-A INPUT -s 104.248.120.187/32 -j DROP
-A INPUT -s 104.27.187.200/32 -j DROP
-A INPUT -s 104.27.186.200/32 -j DROP
-A INPUT -s 72.21.81.61/32 -j DROP
-A INPUT -s 104.24.105.59/32 -j DROP
-A INPUT -s 104.24.104.59/32 -j DROP
-A INPUT -s 88.198.14.69/32 -j DROP
-A INPUT -s 128.199.40.62/32 -j DROP
-A INPUT -s 51.254.241.253/32 -j DROP
-A INPUT -s 134.84.119.107/32 -j DROP
-A INPUT -s 134.84.119.7/32 -j DROP
-A INPUT -s 104.28.0.210/32 -j DROP
-A INPUT -s 104.28.1.210/32 -j DROP
-A INPUT -s 143.204.158.121/32 -j DROP
-A INPUT -s 143.204.158.97/32 -j DROP
-A INPUT -s 143.204.158.81/32 -j DROP
-A INPUT -s 143.204.158.36/32 -j DROP
-A INPUT -s 149.56.229.60/32 -j DROP
-A INPUT -s 193.70.88.154/32 -j DROP
-A INPUT -s 104.28.11.83/32 -j DROP
-A INPUT -s 104.28.10.83/32 -j DROP
-A INPUT -s 192.249.119.26/32 -j DROP
-A INPUT -s 88.198.49.194/32 -j DROP
-A INPUT -s 173.233.66.202/32 -j DROP
-A INPUT -s 198.54.115.191/32 -j DROP
-A INPUT -s 207.154.231.41/32 -j DROP
-A INPUT -s 104.31.221.9/32 -j DROP
-A INPUT -s 104.31.220.9/32 -j DROP
-A INPUT -s 144.217.11.212/32 -j DROP
-A INPUT -s 54.39.105.233/32 -j DROP
-A INPUT -s 104.16.52.179/32 -j DROP
-A INPUT -s 104.16.51.179/32 -j DROP
-A INPUT -s 104.16.50.179/32 -j DROP
-A INPUT -s 104.16.49.179/32 -j DROP
-A INPUT -s 104.16.48.179/32 -j DROP
-A INPUT -s 184.168.131.241/32 -j DROP
-A INPUT -s 176.9.157.111/32 -j DROP
-A INPUT -s 104.28.4.78/32 -j DROP
-A INPUT -s 104.28.5.78/32 -j DROP
-A INPUT -s 217.160.0.193/32 -j DROP
-A INPUT -s 45.79.94.70/32 -j DROP
-A INPUT -s 198.54.117.198/32 -j DROP
-A INPUT -s 198.54.117.197/32 -j DROP
-A INPUT -s 198.54.117.200/32 -j DROP
-A INPUT -s 198.54.117.199/32 -j DROP
-A INPUT -s 104.28.21.147/32 -j DROP
-A INPUT -s 104.28.20.147/32 -j DROP
-A INPUT -s 213.186.33.177/32 -j DROP
-A INPUT -s 94.130.187.179/32 -j DROP
-A INPUT -s 138.68.233.49/32 -j DROP
-A INPUT -s 163.172.85.103/32 -j DROP
-A INPUT -s 104.27.187.190/32 -j DROP
-A INPUT -s 104.27.186.190/32 -j DROP
-A INPUT -s 13.32.240.154/32 -j DROP
-A INPUT -s 13.32.240.17/32 -j DROP
-A INPUT -s 13.32.240.228/32 -j DROP
-A INPUT -s 13.32.240.176/32 -j DROP
-A INPUT -s 188.165.53.185/32 -j DROP
-A INPUT -s 104.27.143.30/32 -j DROP
-A INPUT -s 104.27.142.30/32 -j DROP
-A INPUT -s 45.79.153.79/32 -j DROP
-A INPUT -s 104.25.175.112/32 -j DROP
-A INPUT -s 104.25.176.112/32 -j DROP
-A INPUT -s 35.165.89.77/32 -j DROP
-A INPUT -s 95.216.28.111/32 -j DROP
-A INPUT -s 104.27.184.105/32 -j DROP
-A INPUT -s 104.27.185.105/32 -j DROP
-A INPUT -s 13.249.22.13/32 -j DROP
-A INPUT -s 13.249.22.67/32 -j DROP
-A INPUT -s 13.249.22.54/32 -j DROP
-A INPUT -s 13.249.22.39/32 -j DROP
-A INPUT -s 149.56.103.12/32 -j DROP
-A INPUT -s 216.105.38.13/32 -j DROP
-A INPUT -s 104.20.24.135/32 -j DROP
-A INPUT -s 104.20.23.135/32 -j DROP
-A INPUT -s 178.254.33.195/32 -j DROP
-A INPUT -s 193.70.6.186/32 -j DROP
-A INPUT -s 107.20.159.165/32 -j DROP
-A INPUT -s 149.56.133.126/32 -j DROP
-A INPUT -s 104.18.55.140/32 -j DROP
-A INPUT -s 104.18.54.140/32 -j DROP
-A INPUT -s 172.104.241.78/32 -j DROP
-A INPUT -s 104.200.25.177/32 -j DROP
-A INPUT -s 192.64.119.102/32 -j DROP
-A INPUT -s 192.99.59.233/32 -j DROP
-A INPUT -s 104.24.123.78/32 -j DROP
-A INPUT -s 104.24.122.78/32 -j DROP
-A INPUT -s 198.27.65.115/32 -j DROP
-A INPUT -s 104.27.178.79/32 -j DROP
-A INPUT -s 104.27.179.79/32 -j DROP
-A INPUT -s 172.104.244.59/32 -j DROP
-A INPUT -s 167.99.4.63/32 -j DROP
-A INPUT -s 104.27.180.158/32 -j DROP
-A INPUT -s 104.27.181.158/32 -j DROP
-A INPUT -s 207.148.23.138/32 -j DROP
-A INPUT -s 104.16.18.221/32 -j DROP
-A INPUT -s 104.16.17.221/32 -j DROP
-A INPUT -s 104.16.15.221/32 -j DROP
-A INPUT -s 104.16.14.221/32 -j DROP
-A INPUT -s 104.16.16.221/32 -j DROP
-A INPUT -s 174.142.214.240/32 -j DROP
-A INPUT -s 104.28.27.14/32 -j DROP
-A INPUT -s 104.28.26.14/32 -j DROP
-A INPUT -s 35.237.145.81/32 -j DROP
-A INPUT -s 184.168.221.62/32 -j DROP
-A INPUT -s 149.56.131.158/32 -j DROP
-A INPUT -s 167.99.33.172/32 -j DROP
-A INPUT -s 178.62.229.126/32 -j DROP
-A INPUT -s 172.104.151.94/32 -j DROP
-A INPUT -s 104.25.75.17/32 -j DROP
-A INPUT -s 104.25.74.17/32 -j DROP
-A INPUT -s 97.74.158.128/32 -j DROP
-A INPUT -s 104.31.80.58/32 -j DROP
-A INPUT -s 104.31.81.58/32 -j DROP
-A INPUT -s 104.28.27.242/32 -j DROP
-A INPUT -s 104.28.26.242/32 -j DROP
-A INPUT -s 104.20.254.3/32 -j DROP
-A INPUT -s 104.20.255.3/32 -j DROP
-A INPUT -s 192.64.119.130/32 -j DROP
-A INPUT -s 34.215.222.120/32 -j DROP
-A INPUT -s 198.54.115.71/32 -j DROP
-A INPUT -s 104.24.98.83/32 -j DROP
-A INPUT -s 104.24.99.83/32 -j DROP
-A INPUT -s 5.39.19.11/32 -j DROP
-A INPUT -s 54.239.172.26/32 -j DROP
-A INPUT -s 54.239.172.252/32 -j DROP
-A INPUT -s 54.239.172.148/32 -j DROP
-A INPUT -s 54.239.172.229/32 -j DROP
-A INPUT -s 104.24.124.91/32 -j DROP
-A INPUT -s 104.24.125.91/32 -j DROP
-A INPUT -s 104.28.2.39/32 -j DROP
-A INPUT -s 104.28.3.39/32 -j DROP
-A INPUT -s 95.85.56.113/32 -j DROP
-A INPUT -s 213.32.7.155/32 -j DROP
-A INPUT -s 52.85.237.70/32 -j DROP
-A INPUT -s 52.85.237.156/32 -j DROP
-A INPUT -s 52.85.237.224/32 -j DROP
-A INPUT -s 52.85.237.117/32 -j DROP
-A INPUT -s 213.186.33.173/32 -j DROP
-A INPUT -s 144.217.163.147/32 -j DROP
-A INPUT -s 104.18.39.190/32 -j DROP
-A INPUT -s 104.18.38.190/32 -j DROP
-A INPUT -s 45.32.216.127/32 -j DROP
-A INPUT -s 54.37.151.59/32 -j DROP
-A INPUT -s 69.164.198.72/32 -j DROP
-A INPUT -s 143.204.158.49/32 -j DROP
-A INPUT -s 143.204.158.30/32 -j DROP
-A INPUT -s 143.204.158.25/32 -j DROP
-A INPUT -s 143.204.158.52/32 -j DROP
-A INPUT -s 104.28.28.184/32 -j DROP
-A INPUT -s 104.28.29.184/32 -j DROP
-A INPUT -s 104.28.21.170/32 -j DROP
-A INPUT -s 104.28.20.170/32 -j DROP
-A INPUT -s 104.24.10.65/32 -j DROP
-A INPUT -s 104.24.11.65/32 -j DROP
-A INPUT -s 80.240.23.168/32 -j DROP
-A INPUT -s 80.240.22.236/32 -j DROP
-A INPUT -s 80.240.21.13/32 -j DROP
-A INPUT -s 80.240.19.169/32 -j DROP
-A INPUT -s 80.240.27.161/32 -j DROP
-A INPUT -s 80.240.24.210/32 -j DROP
-A INPUT -s 80.240.24.202/32 -j DROP
-A INPUT -s 159.69.207.247/32 -j DROP
-A INPUT -s 143.204.158.66/32 -j DROP
-A INPUT -s 143.204.158.2/32 -j DROP
-A INPUT -s 143.204.158.112/32 -j DROP
-A INPUT -s 143.204.158.96/32 -j DROP
-A INPUT -s 104.31.81.88/32 -j DROP
-A INPUT -s 104.31.80.88/32 -j DROP
-A INPUT -s 199.59.242.151/32 -j DROP
-A INPUT -s 185.53.178.9/32 -j DROP
-A INPUT -s 138.197.9.24/32 -j DROP
-A INPUT -s 162.255.119.33/32 -j DROP
-A INPUT -s 104.24.125.10/32 -j DROP
-A INPUT -s 104.24.124.10/32 -j DROP
-A INPUT -s 173.255.249.248/32 -j DROP
-A INPUT -s 160.153.129.216/32 -j DROP
-A INPUT -s 35.190.80.109/32 -j DROP
-A INPUT -s 104.25.25.30/32 -j DROP
-A INPUT -s 104.25.24.30/32 -j DROP
-A INPUT -s 64.225.158.192/32 -j DROP
-A INPUT -s 64.225.158.191/32 -j DROP
-A INPUT -s 64.225.158.190/32 -j DROP
-A INPUT -s 64.225.158.189/32 -j DROP
-A INPUT -s 213.186.33.85/32 -j DROP
-A INPUT -s 192.99.58.221/32 -j DROP
-A INPUT -s 104.31.92.175/32 -j DROP
-A INPUT -s 104.31.93.175/32 -j DROP
-A INPUT -s 139.59.143.70/32 -j DROP
-A INPUT -s 95.183.11.196/32 -j DROP
-A INPUT -s 149.28.177.185/32 -j DROP
-A INPUT -s 149.28.111.102/32 -j DROP
-A INPUT -s 149.28.203.114/32 -j DROP
-A INPUT -s 149.28.178.177/32 -j DROP
-A INPUT -s 140.82.30.199/32 -j DROP
-A INPUT -s 149.28.138.210/32 -j DROP
-A INPUT -s 144.202.109.226/32 -j DROP
-A INPUT -s 108.61.210.27/32 -j DROP
-A INPUT -s 149.28.107.121/32 -j DROP
-A INPUT -s 107.191.57.120/32 -j DROP
-A INPUT -s 45.77.109.150/32 -j DROP
-A INPUT -s 148.251.14.163/32 -j DROP
-A INPUT -s 138.197.109.6/32 -j DROP
-A INPUT -s 52.85.237.74/32 -j DROP
-A INPUT -s 52.85.237.157/32 -j DROP
-A INPUT -s 52.85.237.90/32 -j DROP
-A INPUT -s 52.85.237.100/32 -j DROP
-A INPUT -s 54.201.30.196/32 -j DROP
-A INPUT -s 35.161.239.103/32 -j DROP
-A INPUT -s 45.56.77.110/32 -j DROP
-A INPUT -s 88.99.67.94/32 -j DROP
-A INPUT -s 104.31.83.40/32 -j DROP
-A INPUT -s 104.31.82.40/32 -j DROP
-A INPUT -s 104.27.175.39/32 -j DROP
-A INPUT -s 104.27.174.39/32 -j DROP
-A INPUT -s 45.55.255.178/32 -j DROP
-A INPUT -s 104.27.160.204/32 -j DROP
-A INPUT -s 104.27.161.204/32 -j DROP
-A INPUT -s 104.28.12.70/32 -j DROP
-A INPUT -s 104.28.13.70/32 -j DROP
-A INPUT -s 104.20.86.107/32 -j DROP
-A INPUT -s 104.20.85.107/32 -j DROP
-A INPUT -s 104.18.38.147/32 -j DROP
-A INPUT -s 104.18.39.147/32 -j DROP
-A INPUT -s 198.54.116.99/32 -j DROP
-A INPUT -s 184.168.221.57/32 -j DROP
-A INPUT -s 35.196.42.199/32 -j DROP
-A INPUT -s 144.217.80.63/32 -j DROP
-A INPUT -s 52.71.195.70/32 -j DROP
-A INPUT -s 52.70.139.21/32 -j DROP
-A INPUT -s 52.7.153.92/32 -j DROP
-A INPUT -s 52.73.100.51/32 -j DROP
-A INPUT -s 52.72.224.148/32 -j DROP
-A INPUT -s 52.72.205.91/32 -j DROP
-A INPUT -s 52.72.62.94/32 -j DROP
-A INPUT -s 52.72.5.0/32 -j DROP
-A INPUT -s 52.216.20.26/32 -j DROP
-A INPUT -s 45.32.222.242/32 -j DROP
-A INPUT -s 143.204.158.34/32 -j DROP
-A INPUT -s 143.204.158.7/32 -j DROP
-A INPUT -s 143.204.158.67/32 -j DROP
-A INPUT -s 104.28.13.151/32 -j DROP
-A INPUT -s 104.28.12.151/32 -j DROP
-A INPUT -s 95.85.8.39/32 -j DROP
-A INPUT -s 173.236.155.160/32 -j DROP
-A INPUT -s 46.105.112.221/32 -j DROP
-A INPUT -s 45.32.65.129/32 -j DROP
-A INPUT -s 35.201.104.236/32 -j DROP
-A INPUT -s 13.115.117.196/32 -j DROP
-A INPUT -s 192.147.130.63/32 -j DROP
-A INPUT -s 104.24.113.204/32 -j DROP
-A INPUT -s 104.24.112.204/32 -j DROP
-A INPUT -s 104.28.16.184/32 -j DROP
-A INPUT -s 104.28.17.184/32 -j DROP
-A INPUT -s 104.31.69.238/32 -j DROP
-A INPUT -s 104.31.68.238/32 -j DROP
-A INPUT -s 104.25.171.105/32 -j DROP
-A INPUT -s 104.25.172.105/32 -j DROP
-A INPUT -s 104.31.93.132/32 -j DROP
-A INPUT -s 104.31.92.132/32 -j DROP
-A INPUT -s 198.199.87.140/32 -j DROP
-A INPUT -s 104.18.59.184/32 -j DROP
-A INPUT -s 104.18.58.184/32 -j DROP
-A INPUT -s 108.61.171.137/32 -j DROP
-A INPUT -s 35.224.22.25/32 -j DROP
-A INPUT -s 104.31.93.116/32 -j DROP
-A INPUT -s 104.31.92.116/32 -j DROP
-A INPUT -s 51.38.49.90/32 -j DROP
-A INPUT -s 104.24.115.52/32 -j DROP
-A INPUT -s 104.24.114.52/32 -j DROP
-A INPUT -s 144.217.65.195/32 -j DROP
-A INPUT -s 104.27.168.182/32 -j DROP
-A INPUT -s 104.27.169.182/32 -j DROP
-A INPUT -s 104.18.32.151/32 -j DROP
-A INPUT -s 104.18.33.151/32 -j DROP
-A INPUT -s 192.99.150.59/32 -j DROP
-A INPUT -s 162.255.119.90/32 -j DROP
-A INPUT -s 192.99.69.57/32 -j DROP
-A INPUT -s 50.63.202.76/32 -j DROP
-A INPUT -s 45.63.119.24/32 -j DROP
-A INPUT -s 104.18.44.131/32 -j DROP
-A INPUT -s 104.18.45.131/32 -j DROP
-A INPUT -s 104.28.20.32/32 -j DROP
-A INPUT -s 104.28.21.32/32 -j DROP
-A INPUT -s 75.119.217.80/32 -j DROP
-A INPUT -s 52.34.80.248/32 -j DROP
-A INPUT -s 52.42.86.45/32 -j DROP
-A INPUT -s 192.33.31.70/32 -j DROP
-A INPUT -s 104.18.38.80/32 -j DROP
-A INPUT -s 104.18.39.80/32 -j DROP
-A INPUT -s 104.27.138.124/32 -j DROP
-A INPUT -s 104.27.139.124/32 -j DROP
-A INPUT -s 193.31.24.32/32 -j DROP
-A INPUT -s 37.59.9.235/32 -j DROP
-A INPUT -s 45.33.48.95/32 -j DROP
-A INPUT -s 34.215.36.121/32 -j DROP
-A INPUT -s 35.162.139.10/32 -j DROP
-A INPUT -s 104.16.59.5/32 -j DROP
-A INPUT -s 104.16.58.5/32 -j DROP
-A INPUT -s 104.27.147.106/32 -j DROP
-A INPUT -s 104.27.146.106/32 -j DROP
-A INPUT -s 104.20.26.164/32 -j DROP
-A INPUT -s 104.20.27.164/32 -j DROP
-A INPUT -s 104.18.39.140/32 -j DROP
-A INPUT -s 104.18.38.140/32 -j DROP
-A INPUT -s 104.25.214.109/32 -j DROP
-A INPUT -s 104.25.213.109/32 -j DROP
-A INPUT -s 184.168.221.70/32 -j DROP
-A INPUT -s 52.218.160.67/32 -j DROP
-A INPUT -s 45.76.233.38/32 -j DROP
-A INPUT -s 130.211.15.126/32 -j DROP
-A INPUT -s 104.18.33.127/32 -j DROP
-A INPUT -s 104.18.32.127/32 -j DROP
-A INPUT -s 67.205.151.28/32 -j DROP
-A INPUT -s 209.132.252.10/32 -j DROP
-A INPUT -s 104.28.7.158/32 -j DROP
-A INPUT -s 104.28.6.158/32 -j DROP
-A INPUT -s 104.16.135.32/32 -j DROP
-A INPUT -s 104.16.134.32/32 -j DROP
-A INPUT -s 104.16.133.32/32 -j DROP
-A INPUT -s 104.16.136.32/32 -j DROP
-A INPUT -s 104.16.137.32/32 -j DROP
-A INPUT -s 217.182.77.116/32 -j DROP
-A INPUT -s 104.27.184.176/32 -j DROP
-A INPUT -s 104.27.185.176/32 -j DROP
-A INPUT -s 149.56.108.164/32 -j DROP
-A INPUT -s 104.27.141.183/32 -j DROP
-A INPUT -s 104.27.140.183/32 -j DROP
-A INPUT -s 64.30.228.118/32 -j DROP
-A INPUT -s 192.30.252.153/32 -j DROP
-A INPUT -s 192.30.252.154/32 -j DROP
-A INPUT -s 104.18.59.179/32 -j DROP
-A INPUT -s 104.18.58.179/32 -j DROP
-A INPUT -s 68.65.120.143/32 -j DROP
-A INPUT -s 174.138.90.197/32 -j DROP
-A INPUT -s 45.63.1.43/32 -j DROP
-A INPUT -s 104.28.14.36/32 -j DROP
-A INPUT -s 104.28.15.36/32 -j DROP
-A INPUT -s 149.28.112.6/32 -j DROP
-A INPUT -s 149.28.113.75/32 -j DROP
-A INPUT -s 149.28.115.176/32 -j DROP
-A INPUT -s 149.28.117.37/32 -j DROP
-A INPUT -s 149.28.120.17/32 -j DROP
-A INPUT -s 149.28.121.74/32 -j DROP
-A INPUT -s 149.28.124.150/32 -j DROP
-A INPUT -s 149.28.127.92/32 -j DROP
-A INPUT -s 149.28.161.101/32 -j DROP
-A INPUT -s 149.28.166.230/32 -j DROP
-A INPUT -s 207.148.12.221/32 -j DROP
-A INPUT -s 207.148.15.55/32 -j DROP
-A INPUT -s 209.250.243.164/32 -j DROP
-A INPUT -s 209.250.248.56/32 -j DROP
-A INPUT -s 209.250.248.69/32 -j DROP
-A INPUT -s 209.250.249.124/32 -j DROP
-A INPUT -s 8.12.16.246/32 -j DROP
-A INPUT -s 45.76.16.128/32 -j DROP
-A INPUT -s 45.76.17.12/32 -j DROP
-A INPUT -s 45.76.25.12/32 -j DROP
-A INPUT -s 45.76.25.249/32 -j DROP
-A INPUT -s 45.76.30.129/32 -j DROP
-A INPUT -s 45.76.34.32/32 -j DROP
-A INPUT -s 45.76.38.138/32 -j DROP
-A INPUT -s 45.76.121.214/32 -j DROP
-A INPUT -s 45.76.227.96/32 -j DROP
-A INPUT -s 45.76.228.246/32 -j DROP
-A INPUT -s 45.77.237.202/32 -j DROP
-A INPUT -s 66.42.112.147/32 -j DROP
-A INPUT -s 66.42.112.221/32 -j DROP
-A INPUT -s 104.24.124.132/32 -j DROP
-A INPUT -s 104.24.125.132/32 -j DROP
-A INPUT -s 104.18.59.197/32 -j DROP
-A INPUT -s 104.18.58.197/32 -j DROP
-A INPUT -s 104.16.105.170/32 -j DROP
-A INPUT -s 104.16.106.170/32 -j DROP
-A INPUT -s 104.16.104.170/32 -j DROP
-A INPUT -s 104.16.103.170/32 -j DROP
-A INPUT -s 104.16.102.170/32 -j DROP
-A INPUT -s 104.16.22.135/32 -j DROP
-A INPUT -s 104.16.19.135/32 -j DROP
-A INPUT -s 104.16.21.135/32 -j DROP
-A INPUT -s 104.16.20.135/32 -j DROP
-A INPUT -s 104.16.18.135/32 -j DROP
-A INPUT -s 104.16.32.180/32 -j DROP
-A INPUT -s 104.16.35.180/32 -j DROP
-A INPUT -s 104.16.33.180/32 -j DROP
-A INPUT -s 104.16.36.180/32 -j DROP
-A INPUT -s 104.16.34.180/32 -j DROP
-A INPUT -s 104.16.244.154/32 -j DROP
-A INPUT -s 104.16.246.154/32 -j DROP
-A INPUT -s 104.16.242.154/32 -j DROP
-A INPUT -s 104.16.243.154/32 -j DROP
-A INPUT -s 104.16.245.154/32 -j DROP
-A INPUT -s 66.96.160.135/32 -j DROP
-A INPUT -s 104.16.123.63/32 -j DROP
-A INPUT -s 104.16.124.63/32 -j DROP
-A INPUT -s 34.204.135.63/32 -j DROP
-A INPUT -s 35.168.86.246/32 -j DROP
-A INPUT -s 104.27.186.109/32 -j DROP
-A INPUT -s 104.27.187.109/32 -j DROP
-A INPUT -s 162.255.119.240/32 -j DROP
-A INPUT -s 104.25.10.34/32 -j DROP
-A INPUT -s 104.25.11.34/32 -j DROP
-A INPUT -s 54.69.195.129/32 -j DROP
-A INPUT -s 52.27.113.101/32 -j DROP
-A INPUT -s 45.56.104.8/32 -j DROP
-A INPUT -s 142.44.211.86/32 -j DROP
-A INPUT -s 198.54.116.205/32 -j DROP
-A INPUT -s 104.18.50.86/32 -j DROP
-A INPUT -s 104.18.51.86/32 -j DROP
-A INPUT -s 104.25.233.110/32 -j DROP
-A INPUT -s 104.25.234.110/32 -j DROP
-A INPUT -s 104.27.160.179/32 -j DROP
-A INPUT -s 104.27.161.179/32 -j DROP
-A INPUT -s 185.53.178.7/32 -j DROP
-A INPUT -s 104.27.173.87/32 -j DROP
-A INPUT -s 104.27.172.87/32 -j DROP
-A INPUT -s 138.197.202.14/32 -j DROP
-A INPUT -s 143.204.158.89/32 -j DROP
-A INPUT -s 143.204.158.86/32 -j DROP
-A INPUT -s 143.204.158.61/32 -j DROP
-A INPUT -s 143.204.158.111/32 -j DROP
-A INPUT -s 199.167.45.174/32 -j DROP
-A INPUT -s 198.54.125.237/32 -j DROP
-A INPUT -s 95.179.132.241/32 -j DROP
-A INPUT -s 104.31.91.194/32 -j DROP
-A INPUT -s 104.31.90.194/32 -j DROP
-A INPUT -s 176.31.132.10/32 -j DROP
-A INPUT -s 178.33.86.70/32 -j DROP
-A INPUT -s 54.37.161.25/32 -j DROP
-A INPUT -s 104.27.189.140/32 -j DROP
-A INPUT -s 104.27.188.140/32 -j DROP
-A INPUT -s 104.18.48.23/32 -j DROP
-A INPUT -s 104.18.49.23/32 -j DROP
-A INPUT -s 104.24.97.208/32 -j DROP
-A INPUT -s 104.24.96.208/32 -j DROP
-A INPUT -s 209.134.3.27/32 -j DROP
-A INPUT -s 94.23.155.214/32 -j DROP
-A INPUT -s 104.28.27.196/32 -j DROP
-A INPUT -s 104.28.26.196/32 -j DROP
-A INPUT -s 104.28.10.143/32 -j DROP
-A INPUT -s 104.28.11.143/32 -j DROP
-A INPUT -s 104.24.103.112/32 -j DROP
-A INPUT -s 104.24.102.112/32 -j DROP
-A INPUT -s 5.196.171.63/32 -j DROP
-A INPUT -s 149.56.28.55/32 -j DROP
-A INPUT -s 178.33.86.83/32 -j DROP
-A INPUT -s 192.95.3.136/32 -j DROP
-A INPUT -s 104.31.76.135/32 -j DROP
-A INPUT -s 104.31.77.135/32 -j DROP
-A INPUT -s 104.24.126.103/32 -j DROP
-A INPUT -s 104.24.127.103/32 -j DROP
-A INPUT -s 104.28.24.20/32 -j DROP
-A INPUT -s 104.28.25.20/32 -j DROP
-A INPUT -s 104.28.18.79/32 -j DROP
-A INPUT -s 104.28.19.79/32 -j DROP
-A INPUT -s 104.17.151.222/32 -j DROP
-A INPUT -s 104.17.154.222/32 -j DROP
-A INPUT -s 104.17.153.222/32 -j DROP
-A INPUT -s 104.17.150.222/32 -j DROP
-A INPUT -s 104.17.152.222/32 -j DROP
-A INPUT -s 104.27.166.146/32 -j DROP
-A INPUT -s 104.27.167.146/32 -j DROP
-A INPUT -s 192.95.3.135/32 -j DROP
-A INPUT -s 107.150.175.243/32 -j DROP
-A INPUT -s 104.28.2.116/32 -j DROP
-A INPUT -s 104.28.3.116/32 -j DROP
-A INPUT -s 192.147.130.204/32 -j DROP
-A INPUT -s 193.104.215.58/32 -j DROP
-A INPUT -s 104.31.15.179/32 -j DROP
-A INPUT -s 104.31.14.179/32 -j DROP
-A INPUT -s 104.27.150.100/32 -j DROP
-A INPUT -s 104.27.151.100/32 -j DROP
-A INPUT -s 104.20.87.34/32 -j DROP
-A INPUT -s 104.20.88.34/32 -j DROP
-A INPUT -s 174.129.25.170/32 -j DROP
-A INPUT -s 160.153.129.20/32 -j DROP
-A INPUT -s 104.27.177.228/32 -j DROP
-A INPUT -s 104.27.176.228/32 -j DROP
-A INPUT -s 172.64.175.15/32 -j DROP
-A INPUT -s 172.64.174.15/32 -j DROP
-A INPUT -s 104.24.110.25/32 -j DROP
-A INPUT -s 104.24.111.25/32 -j DROP
-A INPUT -s 54.149.252.201/32 -j DROP
-A INPUT -s 23.63.196.224/32 -j DROP
-A INPUT -s 172.217.8.211/32 -j DROP
-A INPUT -s 157.240.2.35/32 -j DROP
-A INPUT -s 151.101.186.49/32 -j DROP
-A INPUT -s 151.101.184.249/32 -j DROP
-A INPUT -s 52.205.91.231/32 -j DROP
-A INPUT -s 34.204.252.77/32 -j DROP
-A INPUT -s 52.207.45.158/32 -j DROP
-A INPUT -s 72.21.81.253/32 -j DROP
-A INPUT -s 172.64.97.38/32 -j DROP
-A INPUT -s 172.64.96.38/32 -j DROP
-A INPUT -s 104.24.105.127/32 -j DROP
-A INPUT -s 104.24.104.127/32 -j DROP
-A INPUT -s 52.85.89.123/32 -j DROP
-A INPUT -s 52.85.89.11/32 -j DROP
-A INPUT -s 52.85.89.179/32 -j DROP
-A INPUT -s 52.85.89.218/32 -j DROP
-A INPUT -s 104.28.9.144/32 -j DROP
-A INPUT -s 104.28.8.144/32 -j DROP
-A INPUT -s 184.168.221.15/32 -j DROP
-A INPUT -s 104.18.44.182/32 -j DROP
-A INPUT -s 104.18.45.182/32 -j DROP
-A INPUT -s 52.85.89.91/32 -j DROP
-A INPUT -s 52.85.89.168/32 -j DROP
-A INPUT -s 52.85.89.232/32 -j DROP
-A INPUT -s 52.85.89.157/32 -j DROP
-A INPUT -s 104.24.116.222/32 -j DROP
-A INPUT -s 104.24.117.222/32 -j DROP
-A INPUT -s 52.85.89.254/32 -j DROP
-A INPUT -s 52.85.89.46/32 -j DROP
-A INPUT -s 52.85.89.160/32 -j DROP
-A INPUT -s 52.85.89.12/32 -j DROP
-A INPUT -s 52.85.89.34/32 -j DROP
-A INPUT -s 52.85.89.19/32 -j DROP
-A INPUT -s 52.85.89.93/32 -j DROP
-A INPUT -s 52.85.89.107/32 -j DROP
-A INPUT -s 52.85.89.97/32 -j DROP
-A INPUT -s 52.85.89.200/32 -j DROP
-A INPUT -s 52.85.89.143/32 -j DROP
-A INPUT -s 139.162.150.144/32 -j DROP
-A INPUT -s 198.199.77.242/32 -j DROP
-A INPUT -s 104.25.172.34/32 -j DROP
-A INPUT -s 104.25.173.34/32 -j DROP
-A INPUT -s 142.93.122.177/32 -j DROP
-A INPUT -s 104.27.176.110/32 -j DROP
-A INPUT -s 104.27.177.110/32 -j DROP
-A INPUT -s 50.63.202.62/32 -j DROP
-A INPUT -s 172.64.164.11/32 -j DROP
-A INPUT -s 172.64.165.11/32 -j DROP
-A INPUT -s 104.20.38.89/32 -j DROP
-A INPUT -s 104.20.39.89/32 -j DROP
-A INPUT -s 52.85.89.33/32 -j DROP
-A INPUT -s 52.85.89.92/32 -j DROP
-A INPUT -s 52.85.89.233/32 -j DROP
-A INPUT -s 52.85.89.40/32 -j DROP
-A INPUT -s 52.85.89.84/32 -j DROP
-A INPUT -s 52.85.93.28/32 -j DROP
-A INPUT -s 52.85.93.138/32 -j DROP
-A INPUT -s 52.85.93.42/32 -j DROP
-A INPUT -s 52.85.93.146/32 -j DROP
-A INPUT -s 104.27.182.149/32 -j DROP
-A INPUT -s 104.27.183.149/32 -j DROP
-A INPUT -s 52.85.89.137/32 -j DROP
-A INPUT -s 52.85.89.172/32 -j DROP
-A INPUT -s 158.69.122.70/32 -j DROP
-A INPUT -s 52.85.89.96/32 -j DROP
-A INPUT -s 52.85.89.54/32 -j DROP
-A INPUT -s 52.85.89.180/32 -j DROP
-A INPUT -s 52.85.89.41/32 -j DROP
-A INPUT -s 52.85.89.63/32 -j DROP
-A INPUT -s 104.18.35.178/32 -j DROP
-A INPUT -s 104.18.34.178/32 -j DROP
-A INPUT -s 45.77.167.246/32 -j DROP
-A INPUT -s 45.77.55.146/32 -j DROP
-A INPUT -s 45.76.163.58/32 -j DROP
-A INPUT -s 45.77.140.101/32 -j DROP
-A INPUT -s 45.77.2.93/32 -j DROP
-A INPUT -s 45.77.196.142/32 -j DROP
-A INPUT -s 45.77.187.28/32 -j DROP
-A INPUT -s 45.76.85.254/32 -j DROP
-A INPUT -s 80.240.16.250/32 -j DROP
-A INPUT -s 45.63.93.23/32 -j DROP
-A INPUT -s 52.85.93.2/32 -j DROP
-A INPUT -s 52.85.93.10/32 -j DROP
-A INPUT -s 52.85.93.171/32 -j DROP
-A INPUT -s 52.85.93.106/32 -j DROP
-A INPUT -s 52.36.211.7/32 -j DROP
-A INPUT -s 34.236.18.196/32 -j DROP
-A INPUT -s 34.234.152.9/32 -j DROP
-A INPUT -s 34.232.188.107/32 -j DROP
-A INPUT -s 34.230.108.175/32 -j DROP
-A INPUT -s 34.228.93.197/32 -j DROP
-A INPUT -s 34.227.214.181/32 -j DROP
-A INPUT -s 35.168.128.7/32 -j DROP
-A INPUT -s 34.237.195.160/32 -j DROP
-A INPUT -s 52.216.96.170/32 -j DROP
-A INPUT -s 13.35.99.122/32 -j DROP
-A INPUT -s 13.35.99.61/32 -j DROP
-A INPUT -s 13.35.99.30/32 -j DROP
-A INPUT -s 13.35.99.124/32 -j DROP
-A INPUT -s 82.196.4.201/32 -j DROP
-A INPUT -s 193.104.215.66/32 -j DROP
-A INPUT -s 13.35.99.43/32 -j DROP
-A INPUT -s 13.35.99.13/32 -j DROP
-A INPUT -s 13.35.99.107/32 -j DROP
-A INPUT -s 13.35.99.57/32 -j DROP
-A INPUT -s 172.64.133.15/32 -j DROP
-A INPUT -s 172.64.132.15/32 -j DROP
-A INPUT -s 104.18.35.193/32 -j DROP
-A INPUT -s 104.18.34.193/32 -j DROP
-A INPUT -s 104.18.57.17/32 -j DROP
-A INPUT -s 104.18.56.17/32 -j DROP
-A INPUT -s 91.235.129.145/32 -j DROP
-A INPUT -s 23.229.235.133/32 -j DROP
-A INPUT -s 52.40.60.34/32 -j DROP
-A INPUT -s 54.191.188.151/32 -j DROP
-A INPUT -s 52.11.47.107/32 -j DROP
-A INPUT -s 104.31.92.234/32 -j DROP
-A INPUT -s 104.31.93.234/32 -j DROP
-A INPUT -s 104.18.54.52/32 -j DROP
-A INPUT -s 104.18.55.52/32 -j DROP
-A INPUT -s 52.218.248.19/32 -j DROP
-A INPUT -s 104.27.187.235/32 -j DROP
-A INPUT -s 104.27.186.235/32 -j DROP
-A INPUT -s 104.27.141.72/32 -j DROP
-A INPUT -s 104.27.140.72/32 -j DROP
-A INPUT -s 13.35.99.8/32 -j DROP
-A INPUT -s 13.35.99.104/32 -j DROP
-A INPUT -s 13.35.99.27/32 -j DROP
-A INPUT -s 162.246.22.76/32 -j DROP
-A INPUT -s 104.27.173.33/32 -j DROP
-A INPUT -s 104.27.172.33/32 -j DROP
-A INPUT -s 172.64.161.10/32 -j DROP
-A INPUT -s 172.64.160.10/32 -j DROP
-A INPUT -s 13.35.99.72/32 -j DROP
-A INPUT -s 13.35.99.29/32 -j DROP
-A INPUT -s 13.35.99.4/32 -j DROP
-A INPUT -s 13.35.99.99/32 -j DROP
-A INPUT -s 104.31.78.129/32 -j DROP
-A INPUT -s 104.31.79.129/32 -j DROP
-A INPUT -s 172.64.197.30/32 -j DROP
-A INPUT -s 172.64.196.30/32 -j DROP
-A INPUT -s 52.44.221.217/32 -j DROP
-A INPUT -s 35.163.192.26/32 -j DROP
-A INPUT -s 13.35.99.115/32 -j DROP
-A INPUT -s 13.35.99.92/32 -j DROP
-A INPUT -s 13.35.99.64/32 -j DROP
-A INPUT -s 13.35.99.10/32 -j DROP
-A INPUT -s 104.18.46.229/32 -j DROP
-A INPUT -s 104.18.47.229/32 -j DROP
-A INPUT -s 13.33.25.116/32 -j DROP
-A INPUT -s 13.33.25.111/32 -j DROP
-A INPUT -s 13.33.25.85/32 -j DROP
-A INPUT -s 13.33.25.124/32 -j DROP
-A INPUT -s 93.190.141.100/32 -j DROP
-A INPUT -s 104.24.103.45/32 -j DROP
-A INPUT -s 104.24.102.45/32 -j DROP
-A INPUT -s 104.27.185.26/32 -j DROP
-A INPUT -s 104.27.184.26/32 -j DROP
-A INPUT -s 104.25.182.37/32 -j DROP
-A INPUT -s 104.25.181.37/32 -j DROP
-A INPUT -s 104.27.144.222/32 -j DROP
-A INPUT -s 104.27.145.222/32 -j DROP
-A INPUT -s 104.31.3.187/32 -j DROP
-A INPUT -s 104.31.2.187/32 -j DROP
-A INPUT -s 172.230.219.127/32 -j DROP
-A INPUT -s 172.217.9.147/32 -j DROP
-A INPUT -s 157.240.19.35/32 -j DROP
-A INPUT -s 151.101.50.49/32 -j DROP
-A INPUT -s 151.101.48.249/32 -j DROP
-A INPUT -s 13.35.99.69/32 -j DROP
-A INPUT -s 13.35.99.118/32 -j DROP
-A INPUT -s 184.168.221.25/32 -j DROP
-A INPUT -s 13.35.99.105/32 -j DROP
-A INPUT -s 13.35.99.20/32 -j DROP
-A INPUT -s 13.33.25.96/32 -j DROP
-A INPUT -s 13.33.25.67/32 -j DROP
-A INPUT -s 13.33.25.36/32 -j DROP
-A INPUT -s 13.33.25.110/32 -j DROP
-A INPUT -s 13.33.25.119/32 -j DROP
-A INPUT -s 13.33.25.69/32 -j DROP
-A INPUT -s 13.33.25.66/32 -j DROP
-A INPUT -s 13.33.25.62/32 -j DROP
-A INPUT -s 13.35.99.16/32 -j DROP
-A INPUT -s 13.35.99.15/32 -j DROP
-A INPUT -s 13.35.99.56/32 -j DROP
-A INPUT -s 13.35.99.49/32 -j DROP
-A INPUT -s 184.168.221.35/32 -j DROP
-A INPUT -s 13.33.25.2/32 -j DROP
-A INPUT -s 13.33.25.104/32 -j DROP
-A INPUT -s 13.33.25.100/32 -j DROP
-A INPUT -s 13.33.25.49/32 -j DROP
-A INPUT -s 13.35.99.63/32 -j DROP
-A INPUT -s 13.35.99.95/32 -j DROP
-A INPUT -s 13.35.99.52/32 -j DROP
-A INPUT -s 13.35.103.15/32 -j DROP
-A INPUT -s 13.35.103.63/32 -j DROP
-A INPUT -s 13.35.103.87/32 -j DROP
-A INPUT -s 13.35.103.202/32 -j DROP
-A INPUT -s 13.33.25.52/32 -j DROP
-A INPUT -s 13.33.25.23/32 -j DROP
-A INPUT -s 13.33.25.87/32 -j DROP
-A INPUT -s 13.33.25.60/32 -j DROP
-A INPUT -s 13.35.99.98/32 -j DROP
-A INPUT -s 13.35.99.116/32 -j DROP
-A INPUT -s 13.35.99.44/32 -j DROP
-A INPUT -s 13.35.99.123/32 -j DROP
-A INPUT -s 13.33.69.139/32 -j DROP
-A INPUT -s 13.33.69.67/32 -j DROP
-A INPUT -s 13.33.69.44/32 -j DROP
-A INPUT -s 13.33.69.161/32 -j DROP
-A INPUT -s 52.216.162.170/32 -j DROP
-A INPUT -s 52.218.249.27/32 -j DROP
-A INPUT -s 13.33.25.22/32 -j DROP
-A INPUT -s 13.33.25.78/32 -j DROP
-A INPUT -s 13.33.25.65/32 -j DROP
-A INPUT -s 13.35.99.39/32 -j DROP
-A INPUT -s 13.35.99.19/32 -j DROP
-A INPUT -s 13.35.99.73/32 -j DROP
-A INPUT -s 13.35.99.66/32 -j DROP
-A INPUT -s 216.58.218.179/32 -j DROP
-A INPUT -s 13.33.25.61/32 -j DROP
-A INPUT -s 13.33.25.12/32 -j DROP
-A INPUT -s 13.33.25.128/32 -j DROP
-A INPUT -s 13.33.25.70/32 -j DROP
-A INPUT -s 50.63.202.15/32 -j DROP
-A INPUT -s 13.33.25.5/32 -j DROP
-A INPUT -s 13.33.25.108/32 -j DROP
-A INPUT -s 13.33.25.19/32 -j DROP
-A INPUT -s 13.33.25.7/32 -j DROP
-A INPUT -s 13.35.99.2/32 -j DROP
-A INPUT -s 13.35.99.108/32 -j DROP
-A INPUT -s 13.35.99.11/32 -j DROP
-A INPUT -s 13.35.99.5/32 -j DROP
-A INPUT -s 13.33.25.28/32 -j DROP
-A INPUT -s 13.33.25.73/32 -j DROP
-A INPUT -s 13.33.25.40/32 -j DROP
-A INPUT -s 50.63.202.43/32 -j DROP
-A INPUT -s 34.192.102.251/32 -j DROP
-A INPUT -s 34.192.68.110/32 -j DROP
-A INPUT -s 18.235.81.103/32 -j DROP
-A INPUT -s 34.193.254.1/32 -j DROP
-A INPUT -s 52.216.165.138/32 -j DROP
-A INPUT -s 52.218.200.227/32 -j DROP
-A INPUT -s 52.85.89.112/32 -j DROP
-A INPUT -s 52.85.89.106/32 -j DROP
-A INPUT -s 52.85.89.216/32 -j DROP
-A INPUT -s 52.85.89.73/32 -j DROP
-A INPUT -s 52.85.89.89/32 -j DROP
-A INPUT -s 52.85.89.77/32 -j DROP
-A INPUT -s 52.85.89.100/32 -j DROP
-A INPUT -s 52.85.89.199/32 -j DROP
-A INPUT -s 54.72.9.51/32 -j DROP
-A INPUT -s 52.85.89.71/32 -j DROP
-A INPUT -s 52.85.89.234/32 -j DROP
-A INPUT -s 52.85.89.10/32 -j DROP
-A OUTPUT -d 163.172.142.239/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.7.22/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.6.22/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 160.153.129.121/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.81.162/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.80.162/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.112.180/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.113.180/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 178.128.132.25/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 174.138.109.5/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.156.115/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.157.115/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 213.133.104.179/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 18.224.82.177/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 91.192.226.195/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 23.207.242.201/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.89.137.136/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 54.68.124.197/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 54.68.141.65/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 54.70.96.232/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 54.191.94.148/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.35.47.68/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.35.125.204/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.36.31.140/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.249.22.85/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.249.22.103/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.249.22.66/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.249.22.78/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 46.253.112.22/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.217.7.51/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.25.255.118/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.0.119/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 31.13.93.35/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 151.101.182.49/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 151.101.180.249/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 34.195.24.230/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.20.103.255/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 23.22.170.77/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 208.77.152.196/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 95.131.28.244/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 152.195.19.193/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 72.21.81.131/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.69.74/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.68.74/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.20.20.221/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.20.19.221/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.202.221.181/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.90.99.174/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 37.187.166.230/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.65.130/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.64.130/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.110.135/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.111.135/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 188.165.129.145/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.248.120.187/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.186.200/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.187.200/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 72.21.81.61/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.104.59/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.105.59/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 88.198.14.69/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 128.199.40.62/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 51.254.241.253/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 134.84.119.7/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 134.84.119.107/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.1.210/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.0.210/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 143.204.158.36/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 143.204.158.81/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 143.204.158.97/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 143.204.158.121/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.56.229.60/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 193.70.88.154/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.10.83/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.11.83/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 192.249.119.26/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 88.198.49.194/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 173.233.66.202/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 198.54.115.191/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 207.154.231.41/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.220.9/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.221.9/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 144.217.11.212/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 54.39.105.233/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.48.179/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.49.179/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.50.179/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.51.179/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.52.179/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 184.168.131.241/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 176.9.157.111/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.5.78/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.4.78/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 217.160.0.193/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.79.94.70/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 198.54.117.199/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 198.54.117.200/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 198.54.117.197/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 198.54.117.198/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.20.147/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.21.147/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 213.186.33.177/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 94.130.187.179/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 138.68.233.49/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 163.172.85.103/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.186.190/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.187.190/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.32.240.176/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.32.240.228/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.32.240.17/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.32.240.154/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 188.165.53.185/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.142.30/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.143.30/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.79.153.79/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.25.176.112/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.25.175.112/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 35.165.89.77/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 95.216.28.111/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.185.105/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.184.105/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.249.22.39/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.249.22.54/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.249.22.67/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.249.22.13/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.56.103.12/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 216.105.38.13/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.20.23.135/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.20.24.135/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 178.254.33.195/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 193.70.6.186/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 107.20.159.165/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.56.133.126/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.54.140/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.55.140/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.104.241.78/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.200.25.177/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 192.64.119.102/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 192.99.59.233/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.122.78/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.123.78/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 198.27.65.115/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.179.79/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.178.79/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.104.244.59/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 167.99.4.63/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.181.158/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.180.158/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 207.148.23.138/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.16.221/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.14.221/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.15.221/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.17.221/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.18.221/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 174.142.214.240/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.26.14/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.27.14/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 35.237.145.81/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 184.168.221.62/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.56.131.158/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 167.99.33.172/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 178.62.229.126/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.104.151.94/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.25.74.17/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.25.75.17/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 97.74.158.128/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.81.58/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.80.58/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.26.242/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.27.242/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.20.255.3/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.20.254.3/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 192.64.119.130/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 34.215.222.120/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 198.54.115.71/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.99.83/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.98.83/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 5.39.19.11/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 54.239.172.26/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 54.239.172.252/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 54.239.172.148/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 54.239.172.229/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.125.91/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.124.91/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.3.39/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.2.39/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 95.85.56.113/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 213.32.7.155/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.237.70/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.237.156/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.237.224/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.237.117/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 213.186.33.173/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 144.217.163.147/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.38.190/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.39.190/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.32.216.127/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 54.37.151.59/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 69.164.198.72/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 143.204.158.52/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 143.204.158.25/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 143.204.158.30/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 143.204.158.49/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.29.184/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.28.184/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.20.170/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.21.170/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.11.65/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.10.65/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 80.240.24.202/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 80.240.24.210/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 80.240.27.161/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 80.240.19.169/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 80.240.21.13/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 80.240.22.236/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 80.240.23.168/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 159.69.207.247/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 143.204.158.96/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 143.204.158.112/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 143.204.158.2/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 143.204.158.66/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.80.88/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.81.88/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 199.59.242.151/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 185.53.178.9/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 138.197.9.24/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 162.255.119.33/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.124.10/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.125.10/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 173.255.249.248/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 160.153.129.216/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 35.190.80.109/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.25.24.30/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.25.25.30/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 64.225.158.189/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 64.225.158.190/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 64.225.158.191/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 64.225.158.192/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 213.186.33.85/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 192.99.58.221/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.93.175/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.92.175/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 139.59.143.70/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 95.183.11.196/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 107.191.57.120/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.28.107.121/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 108.61.210.27/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 144.202.109.226/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.28.138.210/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 140.82.30.199/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.28.178.177/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.28.203.114/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.28.111.102/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.28.177.185/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.77.109.150/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 148.251.14.163/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 138.197.109.6/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.237.100/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.237.90/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.237.157/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.237.74/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 35.161.239.103/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 54.201.30.196/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.56.77.110/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 88.99.67.94/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.82.40/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.83.40/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.174.39/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.175.39/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.55.255.178/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.161.204/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.160.204/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.13.70/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.12.70/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.20.85.107/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.20.86.107/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.39.147/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.38.147/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 198.54.116.99/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 184.168.221.57/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 35.196.42.199/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 144.217.80.63/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.72.5.0/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.72.62.94/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.72.205.91/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.72.224.148/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.73.100.51/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.7.153.92/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.70.139.21/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.71.195.70/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.216.20.26/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.32.222.242/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 143.204.158.67/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 143.204.158.7/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 143.204.158.34/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.12.151/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.13.151/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 95.85.8.39/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 173.236.155.160/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 46.105.112.221/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.32.65.129/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 35.201.104.236/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.115.117.196/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 192.147.130.63/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.112.204/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.113.204/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.17.184/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.16.184/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.68.238/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.69.238/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.25.172.105/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.25.171.105/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.92.132/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.93.132/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 198.199.87.140/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.58.184/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.59.184/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 108.61.171.137/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 35.224.22.25/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.92.116/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.93.116/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 51.38.49.90/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.114.52/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.115.52/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 144.217.65.195/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.169.182/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.168.182/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.33.151/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.32.151/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 192.99.150.59/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 162.255.119.90/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 192.99.69.57/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 50.63.202.76/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.63.119.24/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.45.131/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.44.131/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.21.32/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.20.32/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 75.119.217.80/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.42.86.45/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.34.80.248/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 192.33.31.70/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.39.80/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.38.80/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.139.124/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.138.124/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 193.31.24.32/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 37.59.9.235/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.33.48.95/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 35.162.139.10/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 34.215.36.121/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.58.5/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.59.5/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.146.106/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.147.106/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.20.27.164/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.20.26.164/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.38.140/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.39.140/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.25.213.109/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.25.214.109/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 184.168.221.70/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.218.160.67/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.76.233.38/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 130.211.15.126/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.32.127/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.33.127/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 67.205.151.28/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 209.132.252.10/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.6.158/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.7.158/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.137.32/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.136.32/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.133.32/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.134.32/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.135.32/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 217.182.77.116/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.185.176/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.184.176/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.56.108.164/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.140.183/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.141.183/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 64.30.228.118/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 192.30.252.154/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 192.30.252.153/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.58.179/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.59.179/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 68.65.120.143/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 174.138.90.197/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.63.1.43/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.15.36/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.14.36/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.28.112.6/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.28.113.75/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.28.115.176/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.28.117.37/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.28.120.17/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.28.121.74/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.28.124.150/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.28.127.92/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.28.161.101/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.28.166.230/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 207.148.12.221/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 207.148.15.55/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 209.250.243.164/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 209.250.248.56/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 209.250.248.69/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 209.250.249.124/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 8.12.16.246/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.76.16.128/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.76.17.12/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.76.25.12/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.76.25.249/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.76.30.129/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.76.34.32/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.76.38.138/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.76.121.214/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.76.227.96/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.76.228.246/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.77.237.202/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 66.42.112.147/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 66.42.112.221/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.125.132/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.124.132/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.58.197/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.59.197/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.102.170/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.103.170/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.104.170/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.106.170/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.105.170/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.18.135/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.20.135/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.21.135/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.19.135/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.22.135/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.34.180/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.36.180/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.33.180/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.35.180/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.32.180/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.245.154/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.243.154/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.242.154/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.246.154/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.244.154/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 66.96.160.135/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.124.63/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.16.123.63/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 35.168.86.246/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 34.204.135.63/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.187.109/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.186.109/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 162.255.119.240/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.25.11.34/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.25.10.34/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.27.113.101/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 54.69.195.129/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.56.104.8/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 142.44.211.86/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 198.54.116.205/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.51.86/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.50.86/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.25.234.110/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.25.233.110/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.161.179/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.160.179/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 185.53.178.7/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.172.87/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.173.87/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 138.197.202.14/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 143.204.158.111/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 143.204.158.61/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 143.204.158.86/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 143.204.158.89/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 199.167.45.174/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 198.54.125.237/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 95.179.132.241/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.90.194/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.91.194/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 176.31.132.10/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 178.33.86.70/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 54.37.161.25/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.188.140/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.189.140/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.49.23/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.48.23/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.96.208/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.97.208/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 209.134.3.27/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 94.23.155.214/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.26.196/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.27.196/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.11.143/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.10.143/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.102.112/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.103.112/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 5.196.171.63/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 149.56.28.55/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 178.33.86.83/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 192.95.3.136/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.77.135/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.76.135/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.127.103/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.126.103/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.25.20/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.24.20/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.19.79/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.18.79/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.17.152.222/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.17.150.222/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.17.153.222/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.17.154.222/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.17.151.222/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.167.146/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.166.146/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 192.95.3.135/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 107.150.175.243/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.3.116/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.2.116/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 193.104.215.58/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 192.147.130.204/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.14.179/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.15.179/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.151.100/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.150.100/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.20.88.34/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.20.87.34/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 174.129.25.170/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 160.153.129.20/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.176.228/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.177.228/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.64.174.15/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.64.175.15/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.111.25/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.110.25/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 54.149.252.201/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 23.63.196.224/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.217.8.211/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 157.240.2.35/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 151.101.186.49/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 151.101.184.249/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.205.91.231/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 34.204.252.77/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.207.45.158/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 72.21.81.253/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.64.96.38/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.64.97.38/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.104.127/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.105.127/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.218/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.179/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.11/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.123/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.8.144/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.28.9.144/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 184.168.221.15/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.45.182/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.44.182/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.157/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.232/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.168/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.91/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.117.222/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.116.222/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.12/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.160/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.46/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.254/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.93/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.19/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.34/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.143/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.200/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.97/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.107/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 139.162.150.144/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 198.199.77.242/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.25.173.34/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.25.172.34/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 142.93.122.177/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.177.110/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.176.110/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 50.63.202.62/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.64.165.11/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.64.164.11/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.20.39.89/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.20.38.89/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.92/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.33/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.233/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.40/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.84/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.93.28/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.93.138/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.93.42/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.93.146/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.183.149/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.182.149/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.172/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.137/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 158.69.122.70/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.54/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.96/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.63/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.41/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.180/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.34.178/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.35.178/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.63.93.23/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 80.240.16.250/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.76.85.254/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.77.187.28/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.77.196.142/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.77.2.93/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.77.140.101/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.76.163.58/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.77.55.146/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 45.77.167.246/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.93.106/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.93.171/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.93.10/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.93.2/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.36.211.7/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 34.237.195.160/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 35.168.128.7/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 34.227.214.181/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 34.228.93.197/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 34.230.108.175/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 34.232.188.107/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 34.234.152.9/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 34.236.18.196/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.216.96.170/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.124/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.30/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.61/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.122/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 82.196.4.201/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 193.104.215.66/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.57/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.107/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.13/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.43/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.64.132.15/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.64.133.15/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.34.193/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.35.193/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.56.17/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.57.17/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 91.235.129.145/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 23.229.235.133/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 54.191.188.151/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.40.60.34/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.11.47.107/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.93.234/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.92.234/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.55.52/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.54.52/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.218.248.19/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.186.235/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.187.235/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.140.72/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.141.72/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.27/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.104/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.8/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 162.246.22.76/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.172.33/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.173.33/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.64.160.10/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.64.161.10/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.99/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.4/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.29/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.72/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.79.129/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.78.129/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.64.196.30/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.64.197.30/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.44.221.217/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 35.163.192.26/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.10/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.64/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.92/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.115/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.47.229/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.18.46.229/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.124/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.85/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.111/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.116/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 93.190.141.100/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.102.45/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.24.103.45/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.184.26/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.185.26/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.25.181.37/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.25.182.37/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.145.222/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.27.144.222/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.2.187/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 104.31.3.187/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.230.219.127/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.217.9.147/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 157.240.19.35/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 151.101.50.49/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 151.101.48.249/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.118/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.69/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 184.168.221.25/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.20/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.105/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.110/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.36/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.67/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.96/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.62/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.66/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.69/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.119/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.49/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.56/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.15/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.16/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 184.168.221.35/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.49/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.100/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.104/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.2/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.63/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.95/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.52/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.103.15/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.103.63/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.103.87/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.103.202/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.60/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.87/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.23/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.52/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.116/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.98/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.123/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.44/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.69.161/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.69.44/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.69.67/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.69.139/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.216.162.170/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.218.249.27/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.65/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.78/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.22/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.66/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.73/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.19/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.39/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 216.58.218.179/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.70/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.128/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.12/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.61/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 50.63.202.15/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.7/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.19/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.108/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.5/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.5/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.11/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.108/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.35.99.2/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.40/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.73/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 13.33.25.28/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 50.63.202.43/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 34.193.254.1/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 18.235.81.103/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 34.192.68.110/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 34.192.102.251/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.216.165.138/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.218.200.227/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.73/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.216/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.106/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.112/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.199/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.100/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.77/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.89/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 54.72.9.51/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.10/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.234/32 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 52.85.89.71/32 -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Fri Dec 14 18:20:39 2018
